--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <!-- Adicionando Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
     </head>
     
 <body>
@@ -15,8 +17,9 @@
         <div class="container">
             <h1>Gabrielle Chemieski</h1>
             <h2>CRP 07/39189</h2>
-            <p>A transformação que você busca começa na sua mente. Vamos caminhar juntos? 🧠⤵️</p>
-            <a href="https://api.whatsapp.com/message/3YQT5VMFXFKHI1?autoload=1&app_absent=0" target="_blank" class="btn-agendar">Agende sua consulta pelo WhatsApp</a>
+            <p>A transformação que você busca começa na sua mente. <br>Vamos caminhar juntos? 🧠⤵️</p>
+            <a href="#" class="btn-agendar"><span>Agende sua consulta pelo WhatsApp</span></a>
+
 
         </div>
     </header>
@@ -26,7 +29,7 @@
     <section id="sobre" class="sobre">
         <div class="container">
             <h2>Sobre mim</h2>
-            <p>"Psicóloga formada pela Faculdade Anhanguera de Rio Grande, com especialização em Saúde Mental, Psicopatologia, Atenção Psicossocial e Terapia Cognitivo-Comportamental. Atualmente, atua como psicóloga clínica, realizando atendimentos online para jovens adultos, adultos e idosos ao redor do mundo, além de atendimentos presenciais na cidade de Rio Grande, RS."</p>
+            <p>Psicóloga formada pela Faculdade Anhanguera de Rio Grande, com especialização em Saúde Mental, Psicopatologia, Atenção Psicossocial e Terapia Cognitivo-Comportamental. Atualmente, atua como psicóloga clínica, realizando atendimentos online para jovens adultos, adultos e idosos ao redor do mundo, além de atendimentos presenciais na cidade de Rio Grande, RS.</p>
         </div>
     </section>
     
@@ -73,8 +76,11 @@
                 <a href="https://www.instagram.com/psi.gabriellechemieski/" target="_blank" class="social-icon instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/gabriellechemieski/" target="_blank" class="social-icon linkedin">
-                    <i class="fab fa-linkedin"></i>
+                <a href="https://www.facebook.com/people/Psic%C3%B3loga-Gabrielle-Chemieski-CRP-0739189/100090650666440/?mibextid=ZbWKwL" target="_blank" class="social-icon facebook">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://api.whatsapp.com/message/3YQT5VMFXFKHI1?autoload=1&app_absent=0" target="_blank" class="social-icon whatsapp">
+                    <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
     <footer>
