--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Gabrielle Chemieski</h1>
             <h2>CRP 07/39189</h2>
             <p>A transformação que você busca começa na sua mente. <br>Vamos caminhar juntos? 🧠⤵️</p>
-            <a href="#" class="btn-agendar"><span>Agende sua consulta pelo WhatsApp</span></a>
+            <a href="https://api.whatsapp.com/message/3YQT5VMFXFKHI1?autoload=1&app_absent=0" class="btn-agendar"><span>Agende sua consulta pelo WhatsApp</span></a>
 
 
         </div>
