--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabrielle Chemieski - Psicóloga - Atendimento Online e Presencial</title>
+    <link rel="icon" href="Logotipo-cérebro-pensar-psicologia_.ico" type="image/x-icon">
     <meta name="description" content="Psicóloga Gabrielle Chemieski oferece atendimento psicológico online e presencial para jovens adultos, adultos e idosos. Com uma abordagem focada na Terapia Cognitivo-Comportamental (TCC), Gabrielle ajuda os pacientes a identificarem e transformarem padrões de pensamento negativos, promovendo um caminho para o autoconhecimento e a melhoria da saúde mental. Agende sua consulta e descubra um espaço seguro para seu crescimento pessoal.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
