implementado código para react e refeito melhorias gerais

--- a/react-site/index.html
+++ b/react-site/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gabrielle Chemieski - Psicóloga - Atendimento Online e Presencial</title>
+    <link rel="icon" href="/src/assets/Logotipo-cérebro-pensar-psicologia_.ico" type="image/x-icon">
+    <meta name="description" content="Psicóloga Gabrielle Chemieski oferece atendimento psicológico online e presencial para jovens adultos, adultos e idosos. Com uma abordagem focada na Terapia Cognitivo-Comportamental (TCC), Gabrielle ajuda os pacientes a identificarem e transformarem padrões de pensamento negativos, promovendo um caminho para o autoconhecimento e a melhoria da saúde mental. Agende sua consulta e descubra um espaço seguro para seu crescimento pessoal.">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
